Revert George | #3154 | Write test to make sure the collapse & expand function for this section control is disabled, and code complement to pass it. Besides, change the css style for toggle to fit the design.

--- a/styles/bahmniAppsFormBuilder/_form.scss
+++ b/styles/bahmniAppsFormBuilder/_form.scss
@@ -250,7 +250,6 @@
             border: #ccc 1px solid;
             color: grey;
             font-style: normal;
-            cursor: not-allowed;
           }
         }
         &.disabled{
@@ -258,7 +257,6 @@
           border: #ccc 1px solid;
           color: grey;
           font-style: normal;
-          cursor: not-allowed;
         }
       }
     }
